// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Field Status > 🥩 Default render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 Error render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 Processing render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 Success render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 Warning render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 default render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-default"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 error render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-error"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 processing render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-processing"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 red color render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-color-red"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 success render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-success"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;

exports[`Field Status > 🥩 warning render 1`] = `
<div>
  <span
    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
  >
    <span
      class="ant-badge-status-dot ant-badge-status-warning"
    />
    <span
      class="ant-badge-status-text"
    >
      未解决
    </span>
  </span>
</div>
`;
